fix css school initiation plan

--- a/src/app/features/post-login/school-initiation-plan/school-initiation-plan-detail/school-initiation-plan-detail.component.html
+++ b/src/app/features/post-login/school-initiation-plan/school-initiation-plan-detail/school-initiation-plan-detail.component.html
@@ -23,14 +23,22 @@
   ></p-confirmDialog>
   <!-- file preview -->
   <p-dialog
-    [(visible)]="pdfLoaded"
-    [style]="{ width: '90vw', height: '1080px' }"
+    header="Xem tài liệu"
+    [(visible)]="pdfPreviewVisibility"
+    [style]="{ width: '90vw', height: '100vh' }"
     [draggable]="false"
     [resizable]="false"
+    [maximizable]="true"
+    [modal]="true"
+    (onHide)="onHideFilePreviewEvent()"
   >
-    <div *ngIf="pdfLoaded">
-      <iframe [src]="safePdfUrl" width="100%" height="600px"></iframe>
+    <div *ngIf="!pdfLoaded; else pdfIsLoaded" class="spinner">
+      <div class="spinner-border text-center" role="status"></div>
+      <p>Đang tải...</p>
     </div>
+    <ng-template #pdfIsLoaded>
+      <iframe [src]="safePdfUrl" width="100%" height="99%"></iframe>
+    </ng-template>
   </p-dialog>
   <!--doc history -->
   <p-dialog
@@ -224,78 +232,84 @@
       header="Đánh giá tài liệu"
       [(visible)]="uploadFileVisible"
       [modal]="true"
-      [style]="{ width: '60vw', height: '600px' }"
+      [style]="{ width: '60vw' }"
       [draggable]="false"
       [resizable]="false"
       (onHide)="hideUploadPopup()"
     >
-      <label class="mb-1" for=""
-        >Tên tài liệu<span class="p-error">*</span></label
-      >
-      <br />
-      <input
-        pInputText
-        formControlName="documentName"
-        type="text"
-        placeholder="Tên tài liệu"
-      />
-      <span
-        *ngIf="inputFileForm.get('documentName')?.dirty && inputFileForm.controls.documentName.errors?.['whitespace']"
-        class="p-error"
-        >Vui lòng điền tên tài liệu</span
-      >
-      <br />
-      <label class="mb-1 mt-1" for=""
-        >Mã tài liệu<span class="p-error">*</span></label
-      >
-      <br />
-      <input
-        pInputText
-        formControlName="documentCode"
-        type="text"
-        placeholder="Mã tài liệu"
-      />
-      <span
-        *ngIf="inputFileForm.get('documentCode')?.dirty && inputFileForm.controls.documentCode.errors?.['whitespace']"
-        class="p-error"
-        >Vui lòng điền mã tài liệu</span
-      >
-      <br />
-      <label class="mb-1 mt-1" for=""
-        >Tài liệu<span class="p-error">*</span></label
-      >
-      <div class="mb-3 input-file-popup row">
-        <div class="col-md-9">
-          <input
-            type="file"
-            accept="application/pdf"
-            #fileInput
-            style="display: none"
-            (change)="handleFileInputChange(fileInput)"
-          />
-          <input
-            pInputText
-            readonly
-            class="col-md-9"
-            placeholder="{{
-              fileInputPlaceholders
-                ? fileInputPlaceholders
-                : 'Chọn file để tải lên'
-            }}"
-          />
+      <div class="row">
+        <div class="col-md-8">
+          <div class="mb-2">
+            <label class="fw-medium mb-1"
+              >Tên tài liệu<span class="p-error">*</span></label
+            >
+            <br />
+            <input
+              class="w-100"
+              pInputText
+              formControlName="documentName"
+              type="text"
+              placeholder="Tên tài liệu"
+            />
+            <span
+              *ngIf="inputFileForm.get('documentName')?.dirty && inputFileForm.controls.documentName.errors?.['whitespace']"
+              class="p-error"
+              >Vui lòng điền tên tài liệu</span
+            >
+          </div>
         </div>
-        <div class="col-md-3">
-          <button
-            type="button"
-            pButton
-            label="Chọn tệp"
-            (click)="fileInput.click()"
-          ></button>
+        <div class="col-md-4">
+          <div class="mb-2">
+            <label class="mb-1 fw-medium"
+              >Mã tài liệu<span class="p-error">*</span></label
+            >
+            <input
+              class="w-100"
+              pInputText
+              formControlName="documentCode"
+              type="text"
+              placeholder="Mã tài liệu"
+            />
+            <span
+              *ngIf="inputFileForm.get('documentCode')?.dirty && inputFileForm.controls.documentCode.errors?.['whitespace']"
+              class="p-error"
+              >Vui lòng điền mã tài liệu</span
+            >
+          </div>
         </div>
-
-        <!-- <span *ngIf="inputFileForm.get('file')?.value == ''" class="p-error"
-          >Vui lòng chọn tài liệu</span
-        > -->
+        <div class="col-md-12">
+          <div class="mb-2">
+            <label class="mb-1 fw-medium"
+              >Tài liệu<span class="p-error">*</span></label
+            >
+            <div class="input-file row w-100">
+              <input
+                type="file"
+                accept="application/pdf"
+                #fileInput
+                style="display: none"
+                (change)="handleFileInputChange(fileInput)"
+              />
+              <input
+                pInputText
+                readonly
+                class="col-md-9"
+                placeholder="{{
+                  fileInputPlaceholders
+                    ? fileInputPlaceholders
+                    : 'Chọn file để tải lên'
+                }}"
+              />
+              <button
+                class="col-md-3 upload-file"
+                type="button"
+                pButton
+                label="Chọn tệp"
+                (click)="fileInput.click()"
+              ></button>
+            </div>
+          </div>
+        </div>
       </div>
       <!-- <button
         type="button"
