--- a/src/app/features/post-login/school-initiation-plan/school-initiation-plan-detail/school-initiation-plan-detail.component.scss
+++ b/src/app/features/post-login/school-initiation-plan/school-initiation-plan-detail/school-initiation-plan-detail.component.scss
@@ -1,6 +1,8 @@
 @import "../../../../../assets/scss/base";
 @import "../../../../../assets/scss/prime-custom";
-
+* {
+    font-size: 16px;
+}
 .plan {
     height: 100%;
     font-size: 16px;
@@ -88,12 +90,12 @@ p-calendar.p-calendar-inline {
 }
 input {
     border-radius: 8px;
-    width: 100%;
+    // width: 100%;
 }
 .input-file-popup {
     width: 100%;
     .col-md-3 {
-        padding: 0;
+        padding-left: 0;
         button {
             width: 100%;
         }
@@ -208,6 +210,38 @@ input {
     height: 400px;
     width: 400px;
 }
-// .height-80 {
-//     height: 80px;
-// }
+.input-file {
+    margin: 0;
+    .p-inputtext {
+        border-radius: 8px 0 0 8px;
+        // width: 100%;
+    }
+
+    .upload-file {
+        background-color: $primary;
+        border-radius: 0 8px 8px 0;
+        // margin: 0;
+
+        &:hover,
+        &:active {
+            background-color: $primary-hover;
+            border-color: $primary-hover;
+        }
+    }
+}
+.spinner {
+    width: 100%;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    .spinner-border {
+        width: 5rem;
+        height: 5rem;
+        color: $primary;
+    }
+    p {
+        color: $primary;
+    }
+}
