--- a/src/app/features/post-login/school-side/initiation-plan/initiation-plan-detail/initiation-plan-detail.component.scss
+++ b/src/app/features/post-login/school-side/initiation-plan/initiation-plan-detail/initiation-plan-detail.component.scss
@@ -203,3 +203,19 @@ input {
         text-decoration: underline;
     }
 }
+.spinner {
+    width: 100%;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    .spinner-border {
+        width: 5rem;
+        height: 5rem;
+        color: $primary;
+    }
+    p {
+        color: $primary;
+    }
+}
