--- a/src/app/features/post-login/inspection-plan/update-inspection-plan/update-inspection-plan.component.html
+++ b/src/app/features/post-login/inspection-plan/update-inspection-plan/update-inspection-plan.component.html
@@ -1,37 +1,37 @@
+<p-confirmDialog
+  [style]="{width: '50vw'}"
+  acceptLabel="Xác nhận"
+  rejectLabel="Hủy bỏ"
+></p-confirmDialog>
+<p-dialog
+  header="Xem tài liệu"
+  [(visible)]="pdfPreviewVisibility"
+  [style]="{ width: '90vw', height: '100vh' }"
+  [draggable]="false"
+  [resizable]="false"
+>
+  <div *ngIf="!pdfLoaded; else pdfIsLoaded" class="spinner">
+    <div class="spinner-border text-center" role="status"></div>
+    <p>Đang tải...</p>
+  </div>
+  <ng-template #pdfIsLoaded>
+    <iframe [src]="safePdfUrl" width="100%" height="105%"></iframe>
+  </ng-template>
+</p-dialog>
+<app-inspection-plan-inspector-popup
+  (popupInspectorVisibleChange)="changeInspectorVisible()"
+  [popupInspectorVisible]="popupInspectorVisible"
+  [inspectorList]="nonInspectorList"
+  [chiefList]="chiefList"
+  (selectedInspectorsList)="getInspectorIds($event)"
+></app-inspection-plan-inspector-popup>
 <div class="container-fluid">
+  <h5 class="mat-headline-5 fw-medium">Cập nhật quyết định kiểm tra</h5>
   <div class="row update-inspection-plan">
-    <p-confirmDialog
-      [style]="{width: '50vw'}"
-      acceptLabel="Xác nhận"
-      rejectLabel="Hủy bỏ"
-    ></p-confirmDialog>
-    <p-dialog
-      header="Xem tài liệu"
-      [(visible)]="pdfPreviewVisibility"
-      [style]="{ width: '90vw', height: '100vh' }"
-      [draggable]="false"
-      [resizable]="false"
-    >
-      <div *ngIf="!pdfLoaded; else pdfIsLoaded" class="spinner">
-        <div class="spinner-border text-center" role="status"></div>
-        <p>Đang tải...</p>
-      </div>
-      <ng-template #pdfIsLoaded>
-        <iframe [src]="safePdfUrl" width="100%" height="105%"></iframe>
-      </ng-template>
-    </p-dialog>
-    <h4 class="mb-2">Cập nhật quyết định kiểm tra</h4>
-    <app-inspection-plan-inspector-popup
-      (popupInspectorVisibleChange)="changeInspectorVisible()"
-      [popupInspectorVisible]="popupInspectorVisible"
-      [inspectorList]="nonInspectorList"
-      [chiefList]="chiefList"
-      (selectedInspectorsList)="getInspectorIds($event)"
-    ></app-inspection-plan-inspector-popup>
     <form class="row" [formGroup]="inspectionPlanForm" (ngSubmit)="onSubmit()">
       <div class="form-content col-md-8">
-        <div class="inspection-plan-name mb-3">
-          <label class="fw-medium">Tên quyết định kiểm tra</label>
+        <div class="inspection-plan-name mb-2">
+          <label class="fw-medium mb-1">Tên quyết định kiểm tra<span class="p-error">*</span></label>
           <input
             type="text"
             pInputText
@@ -49,8 +49,8 @@
             </span>
           </div>
         </div>
-        <div class="inspection-plan-description mb-3">
-          <label class="fw-medium">Chi tiết</label>
+        <div class="inspection-plan-description mb-2">
+          <label class="fw-medium mb-1">Chi tiết<span class="p-error">*</span></label>
           <textarea
             type="text"
             pInputTextarea
@@ -66,14 +66,14 @@
           </div>
         </div>
         <div class="inspection-plan-school mb-3 row">
-          <div class="col-md-6">
-            <label class="fw-medium">Trường kiểm tra</label>
+          <div class="col-md-6 mb-2">
+            <label class="fw-medium mb-1">Trường kiểm tra</label>
             <select title="schoolList" class="form-select" disabled>
               <option selected value="0">{{inspectionPlanDetail?.inspectionPlan?.school?.schoolName}}</option>
             </select>
           </div>
-          <div class="col-md-6">
-            <label class="fw-medium">Trưởng đoàn kiểm tra</label>
+          <div class="col-md-6 mb-2">
+            <label class="fw-medium mb-1">Trưởng đoàn kiểm tra<span class="p-error">*</span></label>
             <p-dropdown class="full-width-dropdown" [options]="eligibleChiefList" formControlName="chiefId"
                         optionLabel="user.fullName"
                         [filter]="true" filterBy="user.fullName" optionValue="accountId" [showClear]="true">
@@ -87,17 +87,17 @@
           </div>
         </div>
         <div class="row mb-3">
-          <div class="col-md-3">
-            <label class="fw-medium">Ngày bắt đầu</label>
+          <div class="col-md-3 mb-2">
+            <label class="fw-medium mb-1">Ngày bắt đầu<span class="p-error">*</span></label>
             <input class="form-control" type="date" formControlName="startDate" [min]="minStartDate" [max]="maxStartDate" (change)="onStartDateChange()"/>
           </div>
-          <div class="col-md-3">
-            <label class="fw-medium">Ngày kết thúc</label>
+          <div class="col-md-3 mb-2">
+            <label class="fw-medium mb-1">Ngày kết thúc<span class="p-error">*</span></label>
             <input class="form-control" type="date" formControlName="endDate"  [min]="minEndDate" (change)="onEndDateChange()"/>
           </div>
         </div>
         <div>
-          <h5 class="mb-2">Tài liệu công văn</h5>
+          <h6 class="mat-headline-6 fw-medium mb-1">Tài liệu công văn</h6>
           <div class="file-item py-1 d-flex"
                (click)="openNewTab(inspectionPlanDetail.inspectionPlan.documents[0]?.documentLink)">
             <div class="file-item-icon d-flex justify-content-center align-items-center">
@@ -142,9 +142,9 @@
           <div [@slideInOut]="documentUpdated ? 'in' :'out'" class="document-item px-2 pt-2 mx-4"
                formGroupName="documentInspectionPlanDto">
             <ng-template ngIf="documentUpdated === 'in'">
-              <div class="col-md-12 d-flex flex-row">
+              <div class="col-md-12 d-flex flex-row mb-2">
                 <div class="col-md-8 pe-3">
-                  <label>Tên tài liệu</label><br/>
+                  <label class="fw-medium mb-1">Tên tài liệu<span class="p-error">*</span></label><br/>
                   <input
                     pInputText
                     placeholder="Điền tên tài liệu"
@@ -161,7 +161,7 @@
                   </div>
                 </div>
                 <div class="col-md-4">
-                  <label>Mã tài liệu</label><br/>
+                  <label class="fw-medium mb-1">Mã tài liệu<span class="p-error">*</span></label><br/>
                   <input
                     pInputText
                     placeholder="Điền mã tài liệu"
@@ -179,7 +179,7 @@
                 </div>
               </div>
               <div class="col-md-12">
-                <label>Tài liệu</label><br/>
+                <label class="fw-medium mb-1">Tài liệu<span class="p-error">*</span></label><br/>
                 <div class="input-file">
                   <input
                     type="file"
