fix scss school list

--- a/src/app/features/post-login/school-initiation-plan/school-initiation-plan-detail/school-initiation-plan-detail.component.html
+++ b/src/app/features/post-login/school-initiation-plan/school-initiation-plan-detail/school-initiation-plan-detail.component.html
@@ -404,7 +404,7 @@
         </div>
       </div>
       <div class="plan-file mt-3">
-        <span class="text-black-50">Tài liệu</span>
+        <label class="fw-medium mb-1">Tài liệu</label>
         <br />
         <div class="row">
           <div class="col-md-8">
