--- a/src/app/features/post-login/school/school-list/school-list.component.html
+++ b/src/app/features/post-login/school/school-list/school-list.component.html
@@ -140,7 +140,7 @@
     </ng-template>
     <ng-template pTemplate="header">
       <tr>
-        <th pSortableColumn="schoolId">
+        <th class="th-id" pSortableColumn="schoolId">
           <div>
             Mã
             <p-sortIcon field="schoolId"></p-sortIcon>
@@ -164,12 +164,12 @@
             <p-sortIcon field="isActive"></p-sortIcon>
           </div>
         </th>
-        <th></th>
+        <th class="th-200"></th>
       </tr>
     </ng-template>
     <ng-template pTemplate="body" let-school>
       <tr>
-        <td>{{ school.schoolId }}</td>
+        <td class="th-id">{{ school.schoolId }}</td>
         <td>{{ school.schoolName }}</td>
         <td>
           <div
@@ -190,6 +190,7 @@
           </p-tag>
         </td>
         <td
+          class="th-200"
           style="text-align: center"
           class="d-flex td-action justify-content-center align-items-center"
         >
