Fix bugs create inspection plan

--- a/src/app/features/post-login/inspection-plan/create-inspection-plan/create-inspection-plan.component.html
+++ b/src/app/features/post-login/inspection-plan/create-inspection-plan/create-inspection-plan.component.html
@@ -6,6 +6,7 @@
   [inspectorList]="inspectorList"
   (selectedInspectorsList)="getInspectorIds($event)"
   [chiefList]="chiefList"
+  [inspectorListIsValid]="inspectorListIsValid"
 ></app-inspection-plan-inspector-popup>
 <p-confirmDialog
   [style]="{ width: '50vw' }"
