--- a/src/app/features/post-login/inspection-plan/update-inspection-plan/update-inspection-plan.component.html
+++ b/src/app/features/post-login/inspection-plan/update-inspection-plan/update-inspection-plan.component.html
@@ -24,6 +24,7 @@
   [inspectorList]="nonInspectorList"
   [chiefList]="chiefList"
   (selectedInspectorsList)="getInspectorIds($event)"
+  [inspectorListIsValid]="inspectorListIsValid"
 ></app-inspection-plan-inspector-popup>
 <div class="container-fluid">
   <h5 class="mat-headline-5 fw-medium">Cập nhật quyết định kiểm tra</h5>
