fix css issue list

--- a/src/app/components/searchbar/searchbar.component.html
+++ b/src/app/components/searchbar/searchbar.component.html
@@ -1,11 +1,13 @@
 <div class="row searchbar mb-2">
   <div class="col-md-6 search">
-    <span class="p-input-icon-right">
+    <!-- <span class="p-input-icon-right">
       <input class="ps-3" pInputText type="text" />
       <i class="fa fa-search" aria-hidden="true"></i>
-    </span>
+    </span> -->
   </div>
-  <div class="col-md-6 d-flex flex-row justify-content-end align-items-center top-nav">
+  <div
+    class="col-md-6 d-flex flex-row justify-content-end align-items-center top-nav"
+  >
     <app-notification-list
       [notificationItems]="notificationListDtos"
       [unseenNotificationDtos]="unseenNotificationListDtos"
@@ -16,5 +18,5 @@
   </div>
 </div>
 
-<app-user-profile [visible] = "isVisible"
-(visibleChange)="onClickUserProfile()"> </app-user-profile>
+<app-user-profile [visible]="isVisible" (visibleChange)="onClickUserProfile()">
+</app-user-profile>
