--- a/src/app/features/post-login/issue/issue-detail/issue-detail.component.html
+++ b/src/app/features/post-login/issue/issue-detail/issue-detail.component.html
@@ -200,5 +200,10 @@
         </div>
       </div>
     </div>
+    <div
+      class="col-md-12 d-flex justify-content-center align-items-center mt-2"
+    >
+      <button pButton (click)="(true)">Hoàn thành</button>
+    </div>
   </div>
 </div>
