--- a/src/app/features/post-login/issue/issue-list/issue-list.component.html
+++ b/src/app/features/post-login/issue/issue-list/issue-list.component.html
@@ -16,82 +16,93 @@
     >
       <ng-template pTemplate="caption">
         <div class="table-header">
-          <span>
+          <div>
             <!-- <i class="bi bi-search"></i> -->
             <input
+              *ngIf="!filterVisible"
               pInputText
               type="text"
               (input)="dt.filterGlobal($any($event.target).value, 'contains')"
               placeholder="Tìm kiếm theo tên kế hoạch, tên người đăng"
             />
-          </span>
+            <div class="d-flex" *ngIf="filterVisible">
+              <div>
+                <p-columnFilter
+                  type="text"
+                  field="issueName"
+                  pTooltip="(VD): Kế hoạch năm hoạch năm 2022 - 2023"
+                  tooltipPosition="top"
+                  placeholder="Tên kế hoạch"
+                ></p-columnFilter>
+              </div>
+              <div>
+                <p-columnFilter
+                  type="text"
+                  field="account.user.fullName"
+                  pTooltip="(VD): Nguyễn Văn A"
+                  tooltipPosition="top"
+                  placeholder="Tên người đăng"
+                ></p-columnFilter>
+              </div>
+              <!-- <th>
+                  <p-columnFilter
+                    type="date"
+                    field="createdDate"
+                    pTooltip="(VD): 1/1/2022"
+                    tooltipPosition="top"
+                    placeholder="Ngày đăng"
+                  ></p-columnFilter>
+                </th> -->
+              <div>
+                <p-columnFilter
+                  type="numeric"
+                  field="inspectorGroupSize"
+                  tooltipPosition="top"
+                ></p-columnFilter>
+              </div>
+            </div>
+          </div>
           <div>
-            <button
-              *ngIf="!filterVisible"
-              pButton
-              (click)="changeFilterVisible(true)"
-              class="advance-search"
-            >
-              Tra cứu nâng cao
-            </button>
-            <button
-              *ngIf="filterVisible"
-              pButton
-              (click)="changeFilterVisible(false)"
-              class="advance-search"
-            >
-              Ẩn tra cứu nâng cao
-            </button>
-            <button
-              pButton
-              (click)="navigateToCreateIssue()"
-              *ngIf="isDirector"
-              class="ms-2"
-            >
-              Tạo mới
-            </button>
+            <div>
+              <button
+                *ngIf="!filterVisible"
+                pButton
+                (click)="changeFilterVisible(true)"
+                class="top-button"
+              >
+                Tra cứu nâng cao
+              </button>
+              <button
+                *ngIf="filterVisible"
+                pButton
+                (click)="resetFilter()"
+                class="reset-button"
+              >
+                Đặt lại
+              </button>
+              <button
+                *ngIf="filterVisible"
+                pButton
+                (click)="changeFilterVisible(false)"
+                class="top-button ml-2"
+              >
+                Ẩn tra cứu nâng cao
+              </button>
+            </div>
+            <div class="mt-3 text-end">
+              <button
+                pButton
+                (click)="navigateToCreateIssue()"
+                *ngIf="isDirector"
+                class="top-button"
+              >
+                Tạo mới
+              </button>
+            </div>
           </div>
         </div>
       </ng-template>
       <ng-template pTemplate="header">
-        <tr *ngIf="filterVisible">
-          <th class="th-id"></th>
-          <th>
-            <p-columnFilter
-              type="text"
-              field="issueName"
-              pTooltip="(VD): Kế hoạch năm hoạch năm 2022 - 2023"
-              tooltipPosition="top"
-              placeholder="Tên kế hoạch"
-            ></p-columnFilter>
-          </th>
-          <th>
-            <p-columnFilter
-              type="text"
-              field="account.user.fullName"
-              pTooltip="(VD): Nguyễn Văn A"
-              tooltipPosition="top"
-              placeholder="Tên người đăng"
-            ></p-columnFilter>
-          </th>
-          <!-- <th>
-            <p-columnFilter
-              type="date"
-              field="createdDate"
-              pTooltip="(VD): 1/1/2022"
-              tooltipPosition="top"
-              placeholder="Ngày đăng"
-            ></p-columnFilter>
-          </th> -->
-          <th>
-            <p-columnFilter
-              type="numeric"
-              field="inspectorGroupSize"
-              tooltipPosition="top"
-            ></p-columnFilter>
-          </th>
-          <th class="th-small"></th>
-        </tr>
         <tr>
           <th class="th-id">
             <div>Id</div>
