--- a/src/app/features/post-login/school-initiation-plan/school-initiation-plan-detail/school-initiation-plan-detail.component.html
+++ b/src/app/features/post-login/school-initiation-plan/school-initiation-plan-detail/school-initiation-plan-detail.component.html
@@ -283,30 +283,34 @@
               >Tài liệu<span class="p-error">*</span></label
             >
             <div class="input-file row w-100">
-              <input
-                type="file"
-                accept="application/pdf"
-                #fileInput
-                style="display: none"
-                (change)="handleFileInputChange(fileInput)"
-              />
-              <input
-                pInputText
-                readonly
-                class="col-md-9"
-                placeholder="{{
-                  fileInputPlaceholders
-                    ? fileInputPlaceholders
-                    : 'Chọn file để tải lên'
-                }}"
-              />
-              <button
-                class="col-md-3 upload-file"
-                type="button"
-                pButton
-                label="Chọn tệp"
-                (click)="fileInput.click()"
-              ></button>
+              <div class="col-md-9 padding-none">
+                <input
+                  type="file"
+                  accept="application/pdf"
+                  #fileInput
+                  style="display: none"
+                  (change)="handleFileInputChange(fileInput)"
+                  class="w-100"
+                />
+                <input
+                  pInputText
+                  readonly
+                  placeholder="{{
+                    fileInputPlaceholders
+                      ? fileInputPlaceholders
+                      : 'Chọn file để tải lên'
+                  }}"
+                />
+              </div>
+              <div class="col-md-3 padding-none">
+                <button
+                  class="upload-file w-100"
+                  type="button"
+                  pButton
+                  label="Chọn tệp"
+                  (click)="fileInput.click()"
+                ></button>
+              </div>
             </div>
           </div>
         </div>
