--- a/src/app/features/post-login/school-initiation-plan/school-initiation-plan-detail/school-initiation-plan-detail.component.scss
+++ b/src/app/features/post-login/school-initiation-plan/school-initiation-plan-detail/school-initiation-plan-detail.component.scss
@@ -214,13 +214,15 @@ input {
     margin: 0;
     .p-inputtext {
         border-radius: 8px 0 0 8px;
-        // width: 100%;
+        width: 100%;
     }
-
+    .padding-none{
+        padding: 0;
+    }
     .upload-file {
         background-color: $primary;
         border-radius: 0 8px 8px 0;
-        // margin: 0;
+        margin: 0;
 
         &:hover,
         &:active {
