--- a/src/app/features/post-login/issue/issue-list/issue-list.component.html
+++ b/src/app/features/post-login/issue/issue-list/issue-list.component.html
@@ -60,6 +60,12 @@
                   tooltipPosition="top"
                 ></p-columnFilter>
               </div>
+              <div>
+                <tui-input-date>
+                  Choose a date
+                  <input tuiTextfield />
+                </tui-input-date>
+              </div>
             </div>
           </div>
           <div>
