fix validate update issue

--- a/src/app/features/post-login/issue/issue-detail/issue-detail.component.html
+++ b/src/app/features/post-login/issue/issue-detail/issue-detail.component.html
@@ -2,6 +2,7 @@
   <span>breadcumb here</span>
   <h5 class="mat-headline-5 fw-medium">Chi tiết kế hoạch kiểm tra</h5>
   <div class="row issue-detail" *ngIf="issue">
+    <!-- pdf preview -->
     <p-dialog
       #pdfDialog
       header="Xem tài liệu"
