--- a/src/app/features/post-login/school/school-list/school-list.component.html
+++ b/src/app/features/post-login/school/school-list/school-list.component.html
@@ -164,7 +164,7 @@
             <p-sortIcon field="isActive"></p-sortIcon>
           </div>
         </th>
-        <th></th>
+        <th class="th-200"></th>
       </tr>
     </ng-template>
     <ng-template pTemplate="body" let-school>
@@ -191,7 +191,7 @@
         </td>
         <td
           style="text-align: center"
-          class="d-flex td-action justify-content-center align-items-center"
+          class="d-flex td-action justify-content-center align-items-center th-200"
         >
           <div
             class="action-item d-flex justify-content-center align-items-center mx-2"
