--- a/src/app/features/post-login/school-initiation-plan/school-initiation-plan-detail/school-initiation-plan-detail.component.html
+++ b/src/app/features/post-login/school-initiation-plan/school-initiation-plan-detail/school-initiation-plan-detail.component.html
@@ -232,7 +232,7 @@
       header="Đánh giá tài liệu"
       [(visible)]="uploadFileVisible"
       [modal]="true"
-      [style]="{ width: '60vw' }"
+      [style]="{ width: '50vw' }"
       [draggable]="false"
       [resizable]="false"
       (onHide)="hideUploadPopup()"
@@ -251,11 +251,22 @@
               type="text"
               placeholder="Tên tài liệu"
             />
-            <span
-              *ngIf="inputFileForm.get('documentName')?.dirty && inputFileForm.controls.documentName.errors?.['whitespace']"
-              class="p-error"
-              >Vui lòng điền tên tài liệu</span
+            <div
+              *ngIf="inputFileForm.controls?.['documentName']?.invalid && (inputFileForm.controls?.['documentName']?.touched || inputFileForm.controls?.['documentName']?.dirty)"
             >
+              <span
+                *ngIf="inputFileForm.controls?.['documentName']?.errors?.['required'] || inputFileForm.controls?.['documentName']?.errors?.['whitespace']"
+                class="p-error"
+              >
+                Vui lòng điền tên tài liệu
+              </span>
+              <span
+                *ngIf="inputFileForm.controls?.['documentName']?.errors?.['maxlength']"
+                class="p-error"
+              >
+                Tên tài liệu quá dài
+              </span>
+            </div>
           </div>
         </div>
         <div class="col-md-4">
@@ -270,11 +281,22 @@
               type="text"
               placeholder="Mã tài liệu"
             />
-            <span
-              *ngIf="inputFileForm.get('documentCode')?.dirty && inputFileForm.controls.documentCode.errors?.['whitespace']"
-              class="p-error"
-              >Vui lòng điền mã tài liệu</span
+            <div
+              *ngIf="inputFileForm.controls?.['documentCode']?.invalid && (inputFileForm.controls?.['documentCode']?.touched || inputFileForm.controls?.['documentCode']?.dirty)"
             >
+              <span
+                *ngIf="inputFileForm.controls?.['documentCode']?.errors?.['required'] || inputFileForm.controls?.['documentCode']?.errors?.['whitespace']"
+                class="p-error"
+              >
+                Vui lòng điền mã tài liệu
+              </span>
+              <span
+                *ngIf="inputFileForm.controls?.['documentCode']?.errors?.['maxlength']"
+                class="p-error"
+              >
+                Mã tài liệu quá dài
+              </span>
+            </div>
           </div>
         </div>
         <div class="col-md-12">
@@ -310,6 +332,17 @@
                   label="Chọn tệp"
                   (click)="fileInput.click()"
                 ></button>
+              </div>
+              <div
+                class="padding-none"
+                *ngIf="inputFileForm.controls?.['file']?.invalid && (inputFileForm.controls?.['file']?.touched || inputFileForm.controls?.['file']?.dirty)"
+              >
+                <span
+                  *ngIf="inputFileForm.controls?.['file']?.errors?.['required']"
+                  class="p-error"
+                >
+                  Vui lòng chọn tài liệu
+                </span>
               </div>
             </div>
           </div>
