--- a/src/app/features/post-login/school-side/initiation-plan/initiation-plan-detail/initiation-plan-detail.component.scss
+++ b/src/app/features/post-login/school-side/initiation-plan/initiation-plan-detail/initiation-plan-detail.component.scss
@@ -219,3 +219,24 @@ input {
         color: $primary;
     }
 }
+.input-file {
+    margin: 0;
+    .p-inputtext {
+        border-radius: 8px 0 0 8px;
+        width: 100%;
+    }
+    .padding-none {
+        padding: 0;
+    }
+    .upload-file {
+        background-color: $primary;
+        border-radius: 0 8px 8px 0;
+        margin: 0;
+
+        &:hover,
+        &:active {
+            background-color: $primary-hover;
+            border-color: $primary-hover;
+        }
+    }
+}
