--- a/src/assets/scss/base.scss
+++ b/src/assets/scss/base.scss
@@ -13,3 +13,10 @@ table.table-fit tfoot th,
 table.table-fit tfoot td {
   width: auto !important;
 }
+
+:host ::ng-deep .tui-date{
+  input{
+    font-size: 16px !important;
+    padding-top: 0 !important;
+  }
+}
