--- a/src/app/components/user-profile/change-password/change-password.component.html
+++ b/src/app/components/user-profile/change-password/change-password.component.html
@@ -28,5 +28,5 @@
 </form>
   <button pButton class="confirm-button mt-3" (click)="confirm()">Xác nhận</button>
 </p-dialog>
-<p-toast key="error" position="top-right"></p-toast>
-
+<p-toast key="change-password" position="top-right"></p-toast>
+<p-confirmDialog [style]="{width: '50vw'}" key="change-password-confirm"></p-confirmDialog>
