--- a/src/app/components/user-profile/user-profile.component.html
+++ b/src/app/components/user-profile/user-profile.component.html
@@ -102,8 +102,8 @@
     </div>
   </div>
 </p-dialog>
-<p-toast position="top-right" key="error"></p-toast>
-<p-confirmDialog [style]="{width: '50vw'}"></p-confirmDialog>
+<p-toast position="top-right" key="user-profile"></p-toast>
+<p-confirmDialog [style]="{width: '50vw'}" key="user-profile-confirm"></p-confirmDialog>
 <app-change-password [visible]="isVisible"
                      (visibleChange)="onClickChangePassword()"></app-change-password>
 <app-loading-complete-dialog
