--- a/src/app/features/post-login/assignment/create-assignment/create-assignment.component.html
+++ b/src/app/features/post-login/assignment/create-assignment/create-assignment.component.html
@@ -8,28 +8,32 @@
     (onHide)="assignmentPopuptHideEvent()"
   >
     <div *ngIf="selectedAssignment && action == 'addchild'" class="mb-2">
-      <span class="mb-1">Thuộc</span>
+      <label class="mb-1 fw-medium">Thuộc</label>
       <br />
       <span class="text-black-50">{{ selectedAssignment.assignmentName }}</span>
     </div>
     <div class="mb-2">
-      <span class="mb-1">Tên công việc</span>
+      <label class="mb-1 fw-medium"
+        >Tên công việc<span class="p-error">*</span></label
+      >
       <br />
       <input
         class="mb-1"
         pInputText
         type="text"
         formControlName="assignmentName"
+        placeholder="Điền tên công việc"
       />
     </div>
     <div class="mb-5">
-      <span class="mb-1">Mô tả chi tiết</span>
+      <label class="fw-medium mb-1">Mô tả chi tiết</label>
       <br />
       <textarea
         class="mb-1"
         rows="5"
         pInputTextarea
         formControlName="description"
+        placeholder="Điền chi tiết công việc"
       ></textarea>
     </div>
     <!-- <div class="mb-5">
