--- a/src/app/features/post-login/school-side/assignment/assign-assignment/assign-assignment.component.html
+++ b/src/app/features/post-login/school-side/assignment/assign-assignment/assign-assignment.component.html
@@ -41,16 +41,42 @@
   <p-dialog
     header="Tải file"
     [(visible)]="fileVisible"
-    [style]="{ width: '40vw', height: '500px' }"
+    [style]="{ width: '40vw' }"
     [draggable]="false"
     [resizable]="false"
+    [modal]="true"
   >
     <form [formGroup]="fileInputForm">
       <div class="row">
-        <div>
+        <div class="col-md-8">
           <label class="fw-medium mb-1"
-            >Mã tài liệu<span class="p-error">*</span></label
+            >Tên tài liệu<span class="p-error">*</span></label
           >
+          <input
+            formControlName="documentName"
+            class="form-control"
+            type="text"
+            placeholder="Điền tên tài liệu"
+          />
+          <div
+            *ngIf="fileInputForm.controls?.['documentName']?.invalid && (fileInputForm.controls?.['documentName']?.touched || fileInputForm.controls?.['documentName']?.dirty)"
+          >
+            <span
+              *ngIf="fileInputForm.controls?.['documentName']?.errors?.['required'] || fileInputForm.controls?.['documentName']?.errors?.['whitespace']"
+              class="p-error"
+            >
+              Vui lòng điền tên tài liệu
+            </span>
+            <span
+              *ngIf="fileInputForm.controls?.['documentName']?.errors?.['maxlength']"
+              class="p-error"
+            >
+              Tên tài liệu quá dài
+            </span>
+          </div>
+        </div>
+        <div class="col-md-4">
+          <label class="fw-medium mb-1">Mã tài liệu</label>
           <br />
           <input
             formControlName="documentCode"
@@ -59,25 +85,24 @@
             placeholder="Điền mã tài liệu"
           />
           <br />
-        </div>
-        <div>
-          <label class="fw-medium mb-1"
-            >Tên tài liệu<span class="p-error">*</span></label
+          <div
+            *ngIf="fileInputForm.controls?.['documentCode']?.invalid && (fileInputForm.controls?.['documentCode']?.touched || fileInputForm.controls?.['documentCode']?.dirty)"
           >
-          <br />
-          <input
-            formControlName="documentName"
-            class="form-control"
-            type="text"
-            placeholder="Điền tên tài liệu"
-          />
-          <br />
-          <span
-            *ngIf="fileInputForm.get('documentName')?.dirty && fileInputForm.controls.documentName.errors?.['whitespace']"
-            class="p-error"
-            >Vui lòng điền tên tài liệu</span
-          >
+            <span
+              *ngIf="fileInputForm.controls?.['documentCode']?.errors?.['required'] || fileInputForm.controls?.['documentCode']?.errors?.['whitespace']"
+              class="p-error"
+            >
+              Vui lòng điền mã tài liệu
+            </span>
+            <span
+              *ngIf="fileInputForm.controls?.['documentCode']?.errors?.['maxlength']"
+              class="p-error"
+            >
+              Mã tài liệu quá dài
+            </span>
+          </div>
         </div>
+
         <div class="file-input">
           <label class="fw-medium mb-1"
             >Tệp tài liệu<span class="p-error">*</span></label
@@ -106,14 +131,8 @@
             (click)="fileInput.click()"
           ></button>
         </div>
-        <div class="mt-3">
-          <button
-            pButton
-            (click)="uploadFiles()"
-            [disabled]="fileInputForm.get('file')?.value == '' || fileInputForm.controls.documentName.errors?.['whitespace'] "
-          >
-            Nộp tài liệu
-          </button>
+        <div class="mt-3 d-flex justify-content-center align-items-center">
+          <button pButton (click)="uploadFiles()">Nộp tài liệu</button>
         </div>
       </div>
     </form>
@@ -129,6 +148,7 @@
       [draggable]="false"
       [resizable]="false"
       (onHide)="assignmentPopuptHideEvent()"
+      [modal]="true"
     >
       <div *ngIf="selectedAssignment" class="row assignment-container">
         <div class="col-md-8 left-box">
